results/classifier/017/none/70868267
operating system: 0.773
graphic: 0.706
device: 0.643
semantic: 0.635
files: 0.552
mistranslation: 0.537
register: 0.530
performance: 0.525
debug: 0.521
architecture: 0.433
PID: 0.420
socket: 0.418
hypervisor: 0.416
network: 0.411
user-level: 0.400
x86: 0.348
kernel: 0.289
peripherals: 0.274
permissions: 0.265
i386: 0.249
risc-v: 0.243
assembly: 0.240
vnc: 0.227
alpha: 0.205
virtual: 0.205
boot: 0.197
arm: 0.189
VMM: 0.187
ppc: 0.180
KVM: 0.167
TCG: 0.159
--------------------
x86: 0.245
operating system: 0.079
files: 0.026
hypervisor: 0.023
TCG: 0.023
debug: 0.020
network: 0.019
PID: 0.018
i386: 0.011
virtual: 0.008
register: 0.006
user-level: 0.004
ppc: 0.003
semantic: 0.003
device: 0.002
socket: 0.002
assembly: 0.002
VMM: 0.002
kernel: 0.002
performance: 0.001
arm: 0.001
alpha: 0.001
graphic: 0.001
vnc: 0.001
peripherals: 0.001
architecture: 0.001
boot: 0.001
risc-v: 0.001
permissions: 0.000
KVM: 0.000
mistranslation: 0.000

[Qemu-devel] [BUG] Failed to compile using gcc7.1

Hi all,

After upgrading gcc from 6.3.1 to 7.1.1, qemu can't be compiled with gcc.

The error is:

------
  CC      block/blkdebug.o
block/blkdebug.c: In function 'blkdebug_refresh_filename':
block/blkdebug.c:693:31: error: '%s' directive output may be truncated
writing up to 4095 bytes into a region of size 4086
[-Werror=format-truncation=]
"blkdebug:%s:%s", s->config_file ?: "",
                               ^~
In file included from /usr/include/stdio.h:939:0,
                 from /home/adam/qemu/include/qemu/osdep.h:68,
                 from block/blkdebug.c:25:
/usr/include/bits/stdio2.h:64:10: note: '__builtin___snprintf_chk'
output 11 or more bytes (assuming 4106) into a destination of size 4096
return __builtin___snprintf_chk (__s, __n, __USE_FORTIFY_LEVEL - 1,
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        __bos (__s), __fmt, __va_arg_pack ());
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make: *** [/home/adam/qemu/rules.mak:69: block/blkdebug.o] Error 1
------

It seems that gcc 7 is introducing more restrict check for printf.
If using clang, although there are some extra warning, it can at least
pass the compile.
Thanks,
Qu

